Fix: Default vertical align for IE

--- a/__core.scss
+++ b/__core.scss
@@ -1,6 +1,7 @@
 @mixin core_big-banner {
 	.big-banner {
 		position: relative;
+		height: 100%;
 	}
 
 	.big-banner-content {
@@ -34,7 +35,7 @@
 		display: table-cell;
 		width: 100%;
 		height: 100%;
-		vertical-align: top;
+		vertical-align: middle;
 	}
 
 	.big-banner-content-align-body {
@@ -85,7 +86,6 @@
 		padding: 0 $big-banner-wrapper-gutter;
 	}
 
-	.big-banner-stage,
 	.big-banner-image {
 		position: absolute;
 		top: 0;
